# quick-version

./: .gitignore  LICENSE  README  TODO  quick-version.cabal  rakefile
examples/: A.hs
src/: Main.hs
