name:        quick-version
version:     0.1
synopsis:    Summarises a package's semantics using QuickCheck to test its functions.
description: Summarises a package's semantics using QuickCheck to test its functions.

homepage:      http://github.com/jystic/quick-version
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    Jacob Stanley <jacob@stanley.io>
copyright:     Copyright (c) 2011, Jacob Stanley
category:      Testing
build-type:    Simple
cabal-version: >=1.2

executable quickver
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
      base       == 4.*
    , ghc        == 7.2.*
    , ghc-paths  == 0.1.*
    , QuickCheck == 2.4.*
